Analizador/comp.jj
PARSER_BEGIN(comp)
import java.io.*;
class comp 
{
	public static void main( String[] args )throws ParseException, Exception
	{
		try
		{		
     		comp analizador = new comp( System.in ) ;
			analizador.Programa();
			System.out.println("\tAnalizador ha terminado.");			
		}
		catch(ParseException e)
		{
			System.out.println(e.getMessage());
			System.out.println("\tAnalizador ha terminado.");
		}
	}
}
PARSER_END(comp)

TOKEN : 
{ 
	  <ASIGNACION : "=">  //1
	| <PLUS : "+" >  //2
	| <MINUS:"-"> //3
	| <MULTIPLY:"*"> //4
	| <DIVIDE:"/"> //5
	| <INCR: "++" > //6
	| <DECR: "--" > //7
	
}
TOKEN:
{
	  <PUBLIC: "public"> //8
	| <PRIVATE: "private"> //9
	| <STATIC: "static"> //10
	| <VOID: "void"> //11
	| <MAIN: "public static void Main()"> //12
	| <PROGRAMA: "Programa" >  //13
	| <IF: "ien" > //14
	| <ELSE:"iotro" > //15
	| <ELSEIF:"ien otro" > //16 
	| <FOR:"irepetir" > //17
	| <SWITCH:"ialternativa" > //18 
	| <CASE:"iopcion" > //19
	| <BREAK:"itermina" > //20
	| <DEFAUL:"ipredef" > //21
	| <DO:"ia" > //22
	| <WHILE:"iespera" > //23 
	| <WRITE:"iescribir" > //24
	| <READ:"ileer" > //25
}
TOKEN:
{
      <LPAREN: "(" > //26	
	| <RPAREN: ")" > //27
	| <LBRACE: "{" > //28
	| <RBRACE: "}" > //29
	| <LBRACKET: "[" > //30
	| <RBRACKET: "]" > //31
	| <SEMICOLON: ";" > //32
	| <COMMA: "," > //33
	| <DOT: "." > //34
	| <DOUBLECOMMA: "\""> //35
}
TOKEN:
{
	  <EQ: "==" > //36
	| <LE: "<=" > //37
	| <MN: "<" > //38
	| <GE: ">=" > //39
	| <GR: ">" > //40
	| <NE: "!=" > //41
	| <OR: "||" > //42
	| <AND: "&&"> //43
}

TOKEN:
{
	  <INT:"inum"> //44
	| <DEC: "idec"> //45
	| <CHR: "ichr"> //46
	| <STR: "istr"> //47
	| <NUMBER : (["0"-"9"])+>  //48
	| <IDENTIFIER : ["a"-"z","A"-"Z"](["a"-"z","A"-"Z","0"-"9","_"])*>  //49
	| <DECIMAL : (["0"-"9"])+["."](["0"-"9"])+ > //50
	| <CADENA : <DOUBLECOMMA>["a"-"z","A"-"Z","0"-"9"," "](["a"-"z","A"-"Z","0"-"9"," ",":",";","."])*<DOUBLECOMMA>> //51
	| <CARAC : "'"["a"-"z","A"-"Z","0"-"9"]"'" >//52 
	| <DOUBLEPOINT : ":">
}

SKIP : 
{ 
	" "|"\n" | "\r" | "\r\n" | "\t"
}

void Programa() :
{}
{		
	<PROGRAMA><IDENTIFIER><LBRACE>Bloque()<RBRACE><EOF>	
}
void Bloque():
{}
{
	
	LOOKAHEAD(2)VariablesGlobales() | Principal()

}

void VariablesGlobales():
{
	System.out.println("" + token.image + ",Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{	
	(<PRIVATE>|<PUBLIC>)(<INT>|<DEC>|<STR>|<CHR>) <IDENTIFIER>(<COMMA><IDENTIFIER>)* <SEMICOLON> Bloque()
}

void Principal():
{
	TokenAsignaciones.SetTables();	
	System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
}
{
	<MAIN>
	<LBRACE>Sentencias()<RBRACE> 	
}


void VariablesLocales():
{
	int td;
	Token var;	
	System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
(
	(TiposDatos())
	{
		td = token.kind;
		
	}
	var = <IDENTIFIER> 
	{		
		TokenAsignaciones.InsertarSimbolo(var, td);
	} 
	[VariablesAsignacion(var)]
	(
		<COMMA>
		var = <IDENTIFIER> 
		{		
			TokenAsignaciones.InsertarSimbolo(var, td);
		} 
		[VariablesAsignacion(var)]
	)*	
	<SEMICOLON> 
)
	(VS())
}

void VariablesAsignacion(Token v1):
{
	Token v2;
	Token v3;
	String res;	
	boolean imp = false;
	System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<ASIGNACION>
	(TiposAsignaciones())
	  {  
		v2 = token;
		res = TokenAsignaciones.checkAsing(v1, v2);
		
		if(res != " ")
		{
			System.out.println(res);
			imp = true;
		}
	  }
	  (OpAritmetico()
	  TiposAsignaciones()
	  {  
		v3 = token;
		res = TokenAsignaciones.checkAsing(v1, v3);
		
		if(res != " " && !imp)
		{
			System.out.println(res);
		}
	  })*
}

void VS():
{}
{
	LOOKAHEAD(3)VariablesLocales() | Sentencias()
}

void Sentencias():
{}
{
	(	
	  VariablesLocales()	
    | SentenciaIf() 	
	| SentenciaFor()
	| SentenciaDo()	
	| LOOKAHEAD(2)SentenciaAsignacion()<SEMICOLON>{TokenAsignaciones.segunda = 0;}
	| SentenciaWrite()
	| SentenciaRead()<SEMICOLON>
	| SentenciaSwitch()
	)*
}

//Sentencia IF
void SentenciaIf():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<IF><LPAREN> A() <RPAREN> <LBRACE> Sentencias() <RBRACE> (Sino())* 
}
void Sino():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<ELSE><LBRACE> Sentencias() <RBRACE> | <ELSEIF> <LPAREN> A() <RPAREN> <LBRACE> Sentencias() <RBRACE>
}

void A():
{
	System.out.println("Posicion: " + token.beginLine);
	TokenAsignaciones.SetTables();
}
{
	  Comparaciones() ([(<AND>|<OR>)] Comparaciones())*
}
//Fin sentencia if

void Comparaciones():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	Valor()Operadores()Valor()
}
void Valor():
{}
{
	LOOKAHEAD(2) (<IDENTIFIER> | <NUMBER>) | Expresion()
}
void Expresion():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
    LOOKAHEAD(2)(<NUMBER> | <IDENTIFIER>)
	|(<IDENTIFIER>|<NUMBER>) OpAritmetico() (<IDENTIFIER>|<NUMBER>) 
}

void Operadores():
{}
{
	    <EQ> 
	  | <LE> 
	  | <GE> 
	  | <NE> 
	  | <GR> 
	  | <MN> 
}
int OpAritmetico():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	  (<PLUS> {return 1;})
	| (<MINUS> {return 1;})
	| (<MULTIPLY> {return 1;})
	| (<DIVIDE> {return 1;})
	| ({return 0;})
	
	{return 0;}
}

void TiposDatos():
{
	
	TokenAsignaciones.SetTables();
	if(token.kind == 44){
		System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Int");
	}
	if(token.kind == 45){
		System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Decimal");
	}
	if(token.kind == 46){
		System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Char");
	}
	if(token.kind == 47){
		System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "cadena");
	}
	if(token.kind != 44 && token.kind != 45 && token.kind != 46 && token.kind != 47){
		System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "otro tipo");
	}
}
{
	 <INT>
	|<DEC>
	|<STR>
	|<CHR>
}


//Sentencia FOR
void SentenciaFor():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<FOR> <LPAREN>(DeclaracionUnaVariable()|SentenciaAsignacion())<SEMICOLON> Comparaciones() <SEMICOLON> SentenciaAsignacion() <RPAREN> <LBRACE> Sentencias() <RBRACE> 
}

void DeclaracionUnaVariable():
{
	int td;
	Token var;	
}
{	
	(TiposDatos())
	{
		td = token.kind;
	}
	var = <IDENTIFIER> 
	{		
		TokenAsignaciones.InsertarSimbolo(var, td);
	} 
	[VariablesAsignacion(var)]		
}

//Sentencia DO
void SentenciaDo():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<DO> <LBRACE>Sentencias() <RBRACE> <WHILE> <LPAREN> Comparaciones() <RPAREN> | SentenciaWhile()
		
}
void SentenciaWhile():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<WHILE> <LPAREN> Comparaciones() <RPAREN> <LBRACE> Sentencias() <RBRACE>
}

//Sentencia ASIGNACION
void SentenciaAsignacion():
{
	Token v1;
	Token v2;
	Token v3;
	int aux;
	String res;
	boolean imp = false;
}
{
  v1 = <IDENTIFIER> 
  (<ASIGNACION>
  (TiposAsignaciones())
  {  
    v2 = token;
	res = TokenAsignaciones.checkAsing(v1, v2);
	
	if(res != " ")
	{
		System.out.println(res);
		imp = true;
	}
  }
  (LOOKAHEAD(2)OpAritmetico()
  TiposAsignaciones()
  {  
    v3 = token;
	res = TokenAsignaciones.checkAsing(v1, v3);
	
	if(res != " " && !imp)
	{
		System.out.println(res);
	}
  })*  
  |
  (<INCR>|<DECR>)
  {  
	res = TokenAsignaciones.checkVariable(v1);
	
	if(res != " ")	
		System.out.println(res);	
  })
  
  //SentenciaAsignacion ya trae <SEMICOLON> en el metodo Sentencias()
}
void TiposAsignaciones():
{}
{
	  <IDENTIFIER> 
	| <NUMBER> 
	| <DECIMAL> 
	| <CADENA> 
	| <CARAC>
}

//Sentencia WRITE
void SentenciaWrite():
{}
{
	<WRITE> <LPAREN> (Expresion()(<PLUS><CADENA>)*|<CADENA>(<PLUS>Expresion())*)* <RPAREN> <SEMICOLON> 
}

//Sentencia READ
void SentenciaRead():
{}
{
	<READ><LPAREN><RPAREN>
}

void SentenciaSwitch():
{
	System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
	TokenAsignaciones.SetTables();
}
{
	<SWITCH><LPAREN><IDENTIFIER><RPAREN><LBRACE>(<CASE>(<IDENTIFIER>|<CADENA>|<CARAC>|<NUMBER>|<DECIMAL>)<DOUBLEPOINT>(SentenciaAsignacion()<SEMICOLON>)+ <BREAK><SEMICOLON>)+[<DEFAUL><DOUBLEPOINT>(SentenciaAsignacion()<SEMICOLON>)<BREAK><SEMICOLON>]<RBRACE>
}
