Analizador/comp.java
/* comp.java */
/* Generated By:JavaCC: Do not edit this line. comp.java */
import java.io.*;
class comp implements compConstants {
        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                comp analizador = new comp( System.in ) ;
                        analizador.Programa();
                        System.out.println("\u005ctAnalizador ha terminado.");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("\u005ctAnalizador ha terminado.");
                }
        }

  static final public void Programa() throws ParseException {
    jj_consume_token(PROGRAMA);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    Bloque();
    jj_consume_token(RBRACE);
    jj_consume_token(0);
  }

  static final public void Bloque() throws ParseException {
    if (jj_2_1(2)) {
      VariablesGlobales();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIN:{
        Principal();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void VariablesGlobales() throws ParseException {System.out.println("" + token.image + ",Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRIVATE:{
      jj_consume_token(PRIVATE);
      break;
      }
    case PUBLIC:{
      jj_consume_token(PUBLIC);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case DEC:{
      jj_consume_token(DEC);
      break;
      }
    case STR:{
      jj_consume_token(STR);
      break;
      }
    case CHR:{
      jj_consume_token(CHR);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IDENTIFIER);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
    jj_consume_token(SEMICOLON);
    Bloque();
  }

  static final public void Principal() throws ParseException {TokenAsignaciones.SetTables();
        System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
    jj_consume_token(MAIN);
    jj_consume_token(LBRACE);
    Sentencias();
    jj_consume_token(RBRACE);
  }

  static final public void VariablesLocales() throws ParseException {int td;
        Token var;
        System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    TiposDatos();
td = token.kind;
    var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      VariablesAsignacion(var);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASIGNACION:{
        VariablesAsignacion(var);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    }
    jj_consume_token(SEMICOLON);
    VS();
  }

  static final public void VariablesAsignacion(Token v1) throws ParseException {Token v2;
        Token v3;
        String res;
        boolean imp = false;
        System.out.println("" + token.image + ", Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    jj_consume_token(ASIGNACION);
    TiposAsignaciones();
v2 = token;
                res = TokenAsignaciones.checkAsing(v1, v2);

                if(res != " ")
                {
                        System.out.println(res);
                        imp = true;
                }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case DIVIDE:
      case NUMBER:
      case IDENTIFIER:
      case DECIMAL:
      case CADENA:
      case CARAC:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      OpAritmetico();
      TiposAsignaciones();
v3 = token;
                res = TokenAsignaciones.checkAsing(v1, v3);

                if(res != " " && !imp)
                {
                        System.out.println(res);
                }
    }
  }

  static final public void VS() throws ParseException {
    if (jj_2_2(3)) {
      VariablesLocales();
    } else {
      Sentencias();
    }
  }

  static final public void Sentencias() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case FOR:
      case SWITCH:
      case DO:
      case WHILE:
      case WRITE:
      case READ:
      case INT:
      case DEC:
      case CHR:
      case STR:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case DEC:
      case CHR:
      case STR:{
        VariablesLocales();
        break;
        }
      case IF:{
        SentenciaIf();
        break;
        }
      case FOR:{
        SentenciaFor();
        break;
        }
      case DO:
      case WHILE:{
        SentenciaDo();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        if (jj_2_3(2)) {
          SentenciaAsignacion();
          jj_consume_token(SEMICOLON);
TokenAsignaciones.segunda = 0;
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WRITE:{
            SentenciaWrite();
            break;
            }
          case READ:{
            SentenciaRead();
            jj_consume_token(SEMICOLON);
            break;
            }
          case SWITCH:{
            SentenciaSwitch();
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

//Sentencia IF
  static final public void SentenciaIf() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    A();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    Sentencias();
    jj_consume_token(RBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:
      case ELSEIF:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      Sino();
    }
  }

  static final public void Sino() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(LBRACE);
      Sentencias();
      jj_consume_token(RBRACE);
      break;
      }
    case ELSEIF:{
      jj_consume_token(ELSEIF);
      jj_consume_token(LPAREN);
      A();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      Sentencias();
      jj_consume_token(RBRACE);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void A() throws ParseException {System.out.println("Posicion: " + token.beginLine);
        TokenAsignaciones.SetTables();
    Comparaciones();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:
      case NUMBER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:{
          jj_consume_token(AND);
          break;
          }
        case OR:{
          jj_consume_token(OR);
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      Comparaciones();
    }
  }

//Fin sentencia if
  static final public 
void Comparaciones() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    Valor();
    Operadores();
    Valor();
  }

  static final public void Valor() throws ParseException {
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        break;
        }
      case NUMBER:{
        jj_consume_token(NUMBER);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        Expresion();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Expresion() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    if (jj_2_5(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        jj_consume_token(NUMBER);
        break;
        }
      case IDENTIFIER:{
        jj_consume_token(IDENTIFIER);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        case NUMBER:{
          jj_consume_token(NUMBER);
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        OpAritmetico();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          jj_consume_token(IDENTIFIER);
          break;
          }
        case NUMBER:{
          jj_consume_token(NUMBER);
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case LE:{
      jj_consume_token(LE);
      break;
      }
    case GE:{
      jj_consume_token(GE);
      break;
      }
    case NE:{
      jj_consume_token(NE);
      break;
      }
    case GR:{
      jj_consume_token(GR);
      break;
      }
    case MN:{
      jj_consume_token(MN);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public int OpAritmetico() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
{if ("" != null) return 1;}
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
{if ("" != null) return 1;}
      break;
      }
    case MULTIPLY:{
      jj_consume_token(MULTIPLY);
{if ("" != null) return 1;}
      break;
      }
    case DIVIDE:{
      jj_consume_token(DIVIDE);
{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[23] = jj_gen;
{if ("" != null) return 0;}
{if ("" != null) return 0;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void TiposDatos() throws ParseException {TokenAsignaciones.SetTables();
        if(token.kind == 44){
                System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Int");
        }
        if(token.kind == 45){
                System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Decimal");
        }
        if(token.kind == 46){
                System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "Char");
        }
        if(token.kind == 47){
                System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "cadena");
        }
        if(token.kind != 44 && token.kind != 45 && token.kind != 46 && token.kind != 47){
                System.out.print("Posicion: " + token.beginLine + ", " + token.beginColumn + "otro tipo");
        }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case DEC:{
      jj_consume_token(DEC);
      break;
      }
    case STR:{
      jj_consume_token(STR);
      break;
      }
    case CHR:{
      jj_consume_token(CHR);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Sentencia FOR
  static final public void SentenciaFor() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    jj_consume_token(FOR);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case DEC:
    case CHR:
    case STR:{
      DeclaracionUnaVariable();
      break;
      }
    case IDENTIFIER:{
      SentenciaAsignacion();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
    Comparaciones();
    jj_consume_token(SEMICOLON);
    SentenciaAsignacion();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    Sentencias();
    jj_consume_token(RBRACE);
  }

  static final public void DeclaracionUnaVariable() throws ParseException {int td;
        Token var;
    TiposDatos();
td = token.kind;
    var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      VariablesAsignacion(var);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
  }

//Sentencia DO
  static final public void SentenciaDo() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DO:{
      jj_consume_token(DO);
      jj_consume_token(LBRACE);
      Sentencias();
      jj_consume_token(RBRACE);
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Comparaciones();
      jj_consume_token(RPAREN);
      break;
      }
    case WHILE:{
      SentenciaWhile();
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaWhile() throws ParseException {System.out.println("Posicion: " + token.beginLine + ", " + token.beginColumn);
        TokenAsignaciones.SetTables();
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Comparaciones();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    Sentencias();
    jj_consume_token(RBRACE);
  }

//Sentencia ASIGNACION
  static final public void SentenciaAsignacion() throws ParseException {Token v1;
        Token v2;
        Token v3;
        int aux;
        String res;
        boolean imp = false;
    v1 = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      jj_consume_token(ASIGNACION);
      TiposAsignaciones();
v2 = token;
        res = TokenAsignaciones.checkAsing(v1, v2);

        if(res != " ")
        {
                System.out.println(res);
                imp = true;
        }
      label_7:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_7;
        }
        OpAritmetico();
        TiposAsignaciones();
v3 = token;
        res = TokenAsignaciones.checkAsing(v1, v3);

        if(res != " " && !imp)
        {
                System.out.println(res);
        }
      }
      break;
      }
    case INCR:
    case DECR:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INCR:{
        jj_consume_token(INCR);
        break;
        }
      case DECR:{
        jj_consume_token(DECR);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
res = TokenAsignaciones.checkVariable(v1);

        if(res != " ")
                System.out.println(res);
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TiposAsignaciones() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case NUMBER:{
      jj_consume_token(NUMBER);
      break;
      }
    case DECIMAL:{
      jj_consume_token(DECIMAL);
      break;
      }
    case CADENA:{
      jj_consume_token(CADENA);
      break;
      }
    case CARAC:{
      jj_consume_token(CARAC);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Sentencia WRITE
  static final public void SentenciaWrite() throws ParseException {
    jj_consume_token(WRITE);
    jj_consume_token(LPAREN);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:
      case CADENA:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case IDENTIFIER:{
        Expresion();
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PLUS:{
            ;
            break;
            }
          default:
            jj_la1[32] = jj_gen;
            break label_9;
          }
          jj_consume_token(PLUS);
          jj_consume_token(CADENA);
        }
        break;
        }
      case CADENA:{
        jj_consume_token(CADENA);
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PLUS:{
            ;
            break;
            }
          default:
            jj_la1[33] = jj_gen;
            break label_10;
          }
          jj_consume_token(PLUS);
          Expresion();
        }
        break;
        }
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

//Sentencia READ
  static final public void SentenciaRead() throws ParseException {
    jj_consume_token(READ);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }
